data/derived/sp14/progs/unify/prog4476.ml.out
Characters 34-42:
  let buildHalve(e1, e2)		   = Halve(e1, e2);;
                                    ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
